--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
+import java.util.Scanner;
+    public class tahminiVarisSuresiHesaplama {
+    public static void main(String[] args){
 
-# Log file
-*.log
+        Scanner input=new Scanner(System.in);
+        int yol,saat;
 
-# BlueJ files
-*.ctxt
+        System.out.print("Yol Mesafenizi Giriniz (km) : ");
+        yol= input.nextInt();
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+        System.out.print("Gitmek İstediğiniz Süreyi Giriniz (saat) : ");
+        saat= input.nextInt();
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+        System.out.print("Ortalama Gitmeniz Gereken Hız: "  + (yol/saat) +"km/s'dir");
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+
+
+    }
+}
